@@ -32,7 +32,7 @@ beta= [0.95]
 Unilateral confidence interval (upper tail)= [-0.429631, 13.1546]
 beta= [0.95]
 mean= [0.1]
-covariance= [[ -0.120326 ]]
+covariance= [[ 0.24 ]]
 correlation= [[ 1 ]]
 spearman= [[ 1 ]]
 kendall= [[ 1 ]]
