@@ -111,6 +111,7 @@
  * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
  * #921 (Cannot print a FixedExperiment when built from sample and weight)
  * #923 (Fix ExponentialModel::getParameter for diagonal correlation)
+ * #930 (The getMean method has a weird behavior on parametrized distribution)
 
 == 1.9 release (2017-04-18) == #release-1.9
 
